--- a/index.html
+++ b/index.html
@@ -12,28 +12,28 @@
 
 <body>
 
-    <div class="container-fluid back-color">
+    <div class="container-fluid back-color sticky-top">
         <div class="container py-4">
             <div class="row">
                 <div class="col-4 sosyal mt-5">
                     <ul>
-                        <li>
-                            <a href="#" class="btn rounded-circle border border-primary bg-primary mr-2">
+                        <li class="d-inline-block">
+                            <a href="#" class="btn text-decoration-none rounded-circle border border-primary bg-primary mr-2">
                                 <i class="fab fa-fw fa-facebook-f"></i>
                             </a>
                         </li>
-                        <li>
-                            <a href="#" class="btn rounded-circle border border-danger bg-danger mr-2">
+                        <li class="d-inline-block">
+                            <a href="#" class="btn text-decoration-none rounded-circle border border-danger bg-danger mr-2">
                                 <i class="fab fa-fw fa-instagram"></i>
                             </a>
                         </li>
-                        <li>
-                            <a href="#" class="btn rounded-circle border border-primary bg-primary mr-2">
+                        <li class="d-inline-block">
+                            <a href="#" class="btn rounded-circle border border-primary text-decoration-none bg-primary mr-2">
                                 <i class="fab fa-fw fa-twitter"></i>
                             </a>
                         </li>
-                        <li>
-                            <a href="#" class="btn rounded-circle border border-success bg-success mr-2">
+                        <li class="d-inline-block">
+                            <a href="#" class="btn text-decoration-none rounded-circle border border-success bg-success mr-2">
                                 <i class="fab fa-fw fa-whatsapp"></i>
                             </a>
 
@@ -41,17 +41,17 @@
                     </ul>
                 </div>
                 <div class="col-4">
-                    <h1 class="text-white text-center baslik">
+                    <h1 class="text-white text-center font-weight-bold">
                         KARABUCAK <br> KURUTULMUŞ <br> CENNET HURMASI
                     </h1>
                 </div>
-                <div class="col-4 sosyal">
+                <div class="col-4">
                     <ul>
-                        <li class="text-success w-100">
-                            <i class="fas fa-phone-alt"></i>
+                        <li class="text-success d-inline-block">
+                            <i class="fas fa-phone-alt fa-3x"></i>
                         </li>
-                        <li>
-                            <a href="#">
+                        <li class="text-center fs-25rem font-weight-bold mt-3 ml-3 d-inline-block">
+                            <a href="#" class="text-white text-decoration-none">
                                 Sipariş Hattı <br>
                                 0546 575 98 89
                             </a>
@@ -62,7 +62,45 @@
         </div>
     </div>
 
+    <div class="container-fluid mt-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="text-center fs-25rem font-weight-bold">FOTOĞRAFLARIMIZ</h2>
+                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="https://www.tarlasera.com/haber_gorselleri/kurutulmus-cennet-hurmasi-avrupa-ya-acildi1.jpg" class="d-block w-100 resim-esitleme" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="https://www.tarlasera.com/haber_gorselleri/22.11.2018-kurutulmus-cennet-hurmasi-avrupa-ya-acildi.jpg" class="d-block w-100 resim-esitleme" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="https://i4.hurimg.com/i/hurriyet/75/750x422/5c1409420f254433d48c332e.jpg" class="d-block w-100 resim-esitleme" alt="...">
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Geri</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">İleri</span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <div>
+
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
