--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container-fluid bg-1 sticky-top">
         <div class="container py-2">
             <div class="row">
-                <div class="col-4 sosyal mt-5">
+                <div class="col-4 sosyal mt-4">
                     <ul>
                         <li class="d-inline-block">
                             <a href="#" class="btn text-decoration-none rounded-circle border border-primary bg-primary mr-2" target="_blank">
@@ -44,8 +44,10 @@
                     </ul>
                 </div>
                 <div class="col-4">
-                    <h1 class="text-primary text-center font-weight-bold">
-                        KARABUCAK <br> KURUTULMUŞ <br> CENNET HURMASI
+                    <h1 class="text-primary text-center font-weight-bold mt-5">
+                        <a href="#" class="text-decoration-none">
+                        CENNET HURMA KURUSU
+                    </a>
                     </h1>
                 </div>
                 <div class="col-4">
